--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -12,11 +12,28 @@
 
 body {
   scroll-behavior: smooth;
-  font-family: "Inter", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 /* Navbar */
 
 .bg-color-gradient {
   background-color: #000000;
+}
+
+.icon_section {
+  position: absolute;
+  float: left;
+  top: 344px;
+}
+
+.icon {
+  font-size: 22px;
+}
+
+.email_section {
+  position: absolute;
+  float: right;
+  top: 300px;
+  writing-mode: vertical-lr;
 }
